app-test-cert-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: app-test-cert
  namespace: default
  labels:
    app: app-test-cert
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers: []
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: app-test-cert
    deploymentconfig: app-test-cert
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-test-cert
        deploymentconfig: app-test-cert
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - name: app-test-cert
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8888
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
